# reader-lite

./: README.md  pyproject.toml
carrels/emma/cache/: austen-emma_003-1815.txt  austen-emma_004-1815.txt  austen-emma_005-1815.txt  austen-emma_007-1815.txt  austen-emma_008-1815.txt  austen-emma_009-1815.txt  austen-emma_010-1815.txt  austen-emma_011-1815.txt  austen-emma_016-1815.txt  austen-emma_018-1815.txt  austen-emma_019-1815.txt  austen-emma_020-1815.txt  (+18 more)
etc/: cached-carrel.txt  cached-cites.txt  cached-query.txt  cached-results.txt  carrels.csv  schema.sql  template.ant
reader/: reader.py
reader/etc/: cached-carrel.txt  cached-cites.txt  cached-query.txt  cached-results.txt  catalog.csv  system-prompt.txt  x-catalog.csv
reader/templates/: base.htm  carrel-form.htm  carrel.htm  elaborate-form.htm  home.htm  persona-form.htm  persona.htm  search-form.htm  search.htm  summarize.htm
reader_lite/: __init__.py
reader_lite/etc/: cached-carrel.txt  cached-cites.txt  cached-persona.txt  cached-query.txt  cached-question.txt  cached-results.txt  catalog.csv  system-prompt.txt
reader_lite/templates/: base.htm  elaborate-form.htm  elaborate.htm  format-error.htm  format.htm  home.htm  question.htm  search-form.htm
server/: server.py  start.sh
server/etc/: cached-cites.txt  cached-query.txt  cached-question.txt  cached-results.txt
server/templates/: base.htm  carrel-form.htm  carrel.htm  cites.htm  elaborate-form.htm  elaborate.htm  format-error.htm  format.htm  persona-form.htm  persona.htm  search-form.htm  summarize.htm  x-cites.htm
(+43 files in other folders)
