[project]
name = "reader_lite"
version = "1.0.0"
description = "A Web-based application for interactively reading four specific books: 1) Emma by Jane Austen, 2) The Illiad and the Odyssey by Homer, 3) Moby Dick by Herman Melville, and 4) Walden Pond by Henry David Thorreau"
dependencies = [
	"flask",
	"numpy",
	"ollama",
	"pandas",
	"pathlib",
	"scipy",
	"scikit-learn",
	"sqlite_vec",
	"typing"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

#[build-system]
#requires = [  "setuptools>=42", "wheel" ]
#build-backend = "setuptools.build_meta"
